Fix header on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -69,3 +69,19 @@ padding-bottom:30px;
 .post-meta{
 	text-align: center;
 }
+
+
+
+.no-js .top-bar {
+  display: none;
+}
+
+@media screen and (min-width: 40em) {
+  .no-js .top-bar {
+    display: block;
+  }
+
+  .no-js .title-bar {
+    display: none;
+  }
+}
